@@ -6,7 +6,7 @@
         <!-- message error  -->
         <template v-if="conflict">
             <div class="alert alert-danger alert-dismissible">
-                <strong>This anime already exists!</strong> Try press button 'Search'
+                <strong>This anime already exists!</strong>
                 <button @click="closeAlert()" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
         </template>
@@ -21,7 +21,10 @@
         <!-- card  -->
         <div class="card mb-3">
             <div class="card-header">
+                <!-- close card -->
                 <button @click="Close()" type="button" class="btn btn-primary"><i class="bi bi-arrow-left"></i></button>
+
+                <!-- button download -->
                 <template v-if="urlPageDownload && exists == false">
                     <template v-if="loading">
                         <button @click="Download()" type="button" class="btn btn-danger">
@@ -32,6 +35,8 @@
                         <button @click="Download()" type="button" class="btn btn-danger"><i class="bi bi-cloud-download"></i></button>
                     </template>
                 </template>
+
+                <!-- button re-download -->
                 <template v-else-if="exists == null">
                     <template v-if="loading">
                         <button @click="ReDownload()" type="button" class="btn btn-warning">
@@ -47,19 +52,24 @@
                         </template>
                     </template>
                 </template>
+
+                <!-- button already downloaded -->
                 <template v-else>
                     <button type="button" class="btn btn-success"><i class="bi bi-bookmark-check"></i></button>
                 </template>
             </div>
             <div class="card-body">
+                <!-- title -->
                 <h3 class="card-title">{{name}}</h3>
 
+                <!-- link page -->
                 <template v-if="urlExternal">
                     <div class="d-grid gap-1">
                         <a class="btn btn-secondary" :href="urlPageDownload" target="_blank" role="button"><i class="bi bi-link"></i></a>
                     </div>
                 </template>
 
+                <!-- start information anime -->
                 <template v-if="date != 'NaN-NaN-NaN'">
                     <div>
                         <h6>Date release:</h6>
@@ -102,41 +112,60 @@
                     </div>
                 <hr>
                 </template>
-                <div v-for="episode in episodes" :key="episode.id">
-                    {{episode.idAnime}} episode: {{episode.numberEpisodeCurrent}}
-                    <template v-if="episode.stateDownload == 'downloading'">
-                        <div class="progress">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" :style="'width: '+episode.percentualDownload+'%'" :aria-valuenow="episode.percentualDownload" aria-valuemin="0" aria-valuemax="100">{{episode.percentualDownload}}%</div>
-                        </div>
+                <!-- end information -->
+
+                <!-- show episodes and status download -->
+                <div class="d-md-flex justify-content-md-end">
+                    <template v-if="showStatus">
+                        <button @click="hideStatusDownload()" class="btn btn-secondary" type="button">hide status download</button>
                     </template>
-                    <template v-else-if="episode.stateDownload == 'completed'">
-                        <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" :style="'width: '+episode.percentualDownload+'%'" :aria-valuenow="episode.percentualDownload" aria-valuemin="0" aria-valuemax="100">completed</div>
-                        </div>
-                    </template>
-                    <template v-else-if="episode.stateDownload == 'failed'">
-                        <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" :style="'width: 100%'" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">failed</div>
-                        </div>
-                    </template>
-                    <template v-else-if="episode.stateDownload == 'pending'">
-                        <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" :style="'width: 100%'" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">pending</div>
-                        </div>
-                    </template>
-                    <template v-else-if="episode.stateDownload == null">
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" :style="'width: 100%'" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">not yet processed</div>
-                        </div>
+                    <template v-else>
+                        <button @click="showStatusDownload()" class="btn btn-primary" type="button">Show status download</button>
                     </template>
                 </div>
+                <template v-if="showStatus">
+                    <div v-for="episode in episodes" :key="episode.id">
+                        <div class="row">
+                            <div class="col">
+                                <span>Id:<b>{{episode.id}}</b></span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <span>{{episode.animeId}} episode: {{episode.numberEpisodeCurrent}}</span>
+                            </div>
+                        </div>
+                        
+                        <div class="progress" style="height: 20px; margin-bottom: 10px;">
+                            <template v-if="episode.stateDownload == 'downloading'">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" :style="'width: '+episode.percentualDownload+'%'" :aria-valuenow="episode.percentualDownload" aria-valuemin="0" aria-valuemax="100">{{episode.percentualDownload}}%</div>
+                            </template>
+                            <template v-else-if="episode.stateDownload == 'completed'">
+                                <div class="progress-bar bg-success" role="progressbar" :style="'width: '+episode.percentualDownload+'%'" :aria-valuenow="episode.percentualDownload" aria-valuemin="0" aria-valuemax="100"><b>COMPLETED</b></div>
+                            </template>
+                            <template v-else-if="episode.stateDownload == 'failed'">
+                                <div class="progress-bar bg-danger" role="progressbar" :style="'width: 100%'" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><b>FAILED</b></div>
+                            </template>
+                            <template v-else-if="episode.stateDownload == 'pending'">
+                                <div class="progress-bar bg-warning" role="progressbar" :style="'width: 100%'" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><b>PENDING</b></div>
+                            </template>
+                            <template v-else>
+                                <div class="progress-bar bg-info" role="progressbar" :style="'width: 100%'" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><b>NOT YET PROCESSED</b></div>
+                            </template>
+                        </div>
+                    </div>
+                </template>
             </div>
-        <template v-if="urlExternal == false || urlExternal == null">
-            <img :src="'data:image/jpg;base64,'+ConvertBase64(image)" class="card-img-top">
-        </template>
-        <template v-else>
-            <img :src="image" class="card-img-top">
-        </template>
+
+            <!-- cover -->
+            <template v-if="!showStatus">
+                <template v-if="urlExternal == false || urlExternal == null">
+                    <img :src="'data:image/jpg;base64,'+ConvertBase64(image)" class="card-img-top">
+                </template>
+                <template v-else>
+                    <img :src="image" class="card-img-top">
+                </template>
+            </template>
         </div>
     </div>
 </template>
@@ -148,6 +177,7 @@ export default {
             timer:1000,
             hide:"",
             episodes:[],
+            showStatus:false,
 
             loading: false,
             conflict: false,
@@ -242,6 +272,12 @@ export default {
         closeAlert(){
             this.conflict = false;
             this.success = false;
+        },
+        showStatusDownload(){
+            this.showStatus = true;
+        },
+        hideStatusDownload(){
+            this.showStatus = false;
         }
     },
 
